--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+.board {
+  width: 400px;
+  height: 300px;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  border: 4px solid blue;
+  margin: 0 auto;
+}
+.square
+{
+  width: 100px;
+  height: 100px;
+  border: 3px solid blue;
+  cursor: pointer;
+  font-weight: 800;
+  font-size: 70px;
+  background: lightblue;
+}
